# se-eli-mcp

./: .gitignore  .mcp.json.example  .publication-gate.json  CONSTITUTION.md  DISCOVERY.md  Dockerfile  README.md  pyproject.toml  server.json
src/se_eli_mcp/: __init__.py  audit.py  cache.py  citations.py  client.py  models.py  server.py
tests/: test_instructions_drift.py  test_parse.py  test_smoke.py
tests/fixtures/: get_act_2018_218.json  search_dataskydd.json
